--- a/covid19.html
+++ b/covid19.html
@@ -8,12 +8,12 @@
 <body>
 	<a href="index.html" class="enlace-sidebar">INICIO</a>
 		<div class="img-post">
-			<img src="img/covid.png">
-			<img src="img/covid2.png">
-			<img src="img/covid3.png">
-			<img src="img/covid4.png">
-			<img src="img/covid5.png">
-			<img src="img/covid6.png">
+			<img src="img/covid.PNG">
+			<img src="img/covid2.PNG">
+			<img src="img/covid3.PNG">
+			<img src="img/covid4.PNG">
+			<img src="img/covid5.PNG">
+			<img src="img/covid6.PNG">
 		</div>
 </body>
 </html>
